# multi_robot_path_planning

./: .gitignore  README.md  output2.txt
RobotPathCostmap/RobotPathCostmap/: CMakeLists.txt  hints.txt  navigation_paths_plugin.xml  package.xml
RobotPathCostmap/RobotPathCostmap/include/RobotPathCostmap/: navigation_paths.h
RobotPathCostmap/RobotPathCostmap/src/: navigation_paths.cpp
benchmark/: .gitignore  CMakeLists.txt  POSE_X  README.md  multi_robo.sh  package.xml  setup.py
benchmark/config/: robot_0_params.yaml  robot_1_params.yaml  robot_2_params.yaml  robot_3_params.yaml  robot_4_params.yaml  robot_5_params.yaml  robot_6_params.yaml  waypoints.json
benchmark/doc/: MAZE_WORLD.md  TB3_WORLD.md  WAREHOUSE_1_WORLD.md  WAREHOUSE_2_WORLD.md  WAREHOUSE_WORLD.md
benchmark/launch/: amcl.launch  evaluation.launch  follower.launch  formation.launch  main.launch  move_base.launch  movement.launch  random.launch  robot_state.launch  settings.launch  simulation.launch  spawn.launch  spawner.launch  teleop_key.launch  tworooms_single_robot.launch  waypoints.launch  world.launch
benchmark/log/: eval_log.txt  log.txt  log_flowtime.csv  log_flowtime_avg.csv  log_makespan.csv  log_makespan_avg.csv  log_wptime.csv
benchmark/nodes/: benchmark_controller.py  evaluation_controller.py  follower.py  formation.py  formation_publisher.py  global_map_broadcaster.py  movement.py  movement_controller.py  positioner.py  settings_publisher.py  spawn_robot.py  spawner.py  spawning_controller.py  topic_handler.py  waypoint.py  waypoints_controller.py  world_creator.py
benchmark/param/: robot_0_params.yaml  robot_1_params.yaml  robot_2_params.yaml  robot_3_params.yaml  robot_4_params.yaml  robot_dummy_params.yaml
benchmark/scripts/: README.sh  benchmark.sh  clean_log.sh  kill.sh  multi_robo.sh  run_benchmark.sh  setup.sh
benchmark/settings/: settings.json
benchmark/worlds/: tworooms.world  warehouse.world
cocktailparty_algorithm/: CMakeLists.txt  README.md  package.xml
cocktailparty_algorithm/config/: settings_Bug2.yml  settings_TangentBug.yml
cocktailparty_algorithm/launch/: bug2.launch  tangentBug.launch
cocktailparty_algorithm/nodes/: bug2.py  go_to_goal.py  tangentBug.py
cocktailparty_algorithm/scripts/: amcl_simple.launch  benchmark.sh  bug2.sh  kill.sh  party.sh  simulation.sh  simulation_simple.launch  tangentBug.sh
cocktailparty_algorithm/src/: bug2.py  tangentBug.py
collvoid-melodic/: .gitignore  README.md
collvoid-melodic/collvoid_amcl/: CHANGELOG.rst  CMakeLists.txt  package.xml
collvoid-melodic/collvoid_benchmark/: CMakeLists.txt  package.xml  setup.py
collvoid-melodic/collvoid_controller/: CMakeLists.txt  package.xml
collvoid-melodic/collvoid_dwa_local_planner/: CMakeLists.txt  package.xml
collvoid-melodic/collvoid_local_planner/: CMakeLists.txt  package.xml
collvoid-melodic/collvoid_melodic/: CMakeLists.txt  package.xml
collvoid-melodic/collvoid_melodic_amcl/: CMakeLists.txt  package.xml
collvoid-melodic/collvoid_melodic_dwa_local_planner/: CMakeLists.txt  blp_plugin.xml  package.xml
collvoid-melodic/collvoid_melodic_dwa_local_planner/cfg/: DWAPlanner.cfg
collvoid-melodic/collvoid_melodic_dwa_local_planner/include/collvoid_melodic_dwa_local_planner/: dwa_planner.h
collvoid-melodic/collvoid_melodic_dwa_local_planner/src/: dwa_planner.cpp  goal_alignment_cost_function.cpp
collvoid-melodic/collvoid_msgs/: CMakeLists.txt
collvoid-melodic/collvoid_simple_global_planner/: CMakeLists.txt  package.xml
collvoid-melodic/collvoid_srvs/: CMakeLists.txt  package.xml
collvoid-melodic/collvoid_turtlebot/: CMakeLists.txt  package.xml
collvoid-melodic/collvoid_wiggle_recovery/: CMakeLists.txt  package.xml
collvoid-melodic/collvoid_wiggle_recovery/include/collvoid_wiggle_recovery/: collvoid_wiggle_recovery.h
collvoid-melodic/res/: DE-project_presentation of results.pptx  ScreencastRVIZ.webm  ScreenshotRVIZ.xcf  comparison.xlsx
multi_robot/: package.xml
multi_robot/launch/: amcl.launch  follower.launch  leader.launch  main.launch  move_base.launch  random.launch  robots.launch  simulation.launch  teleop_key.launch
multi_robot/nodes/: follower.py  global_map_broadcaster.py  inital_pose_publisher.py
multi_robot/scripts/: kill.sh  multi_robo.sh
orca/: CMakeLists.txt  package.xml
robot_path_costmap/: README.md
robot_path_costmap/benchmark_results/: comparison.xlsx  logs_tb3-world_path_layer.xlsx  logs_two-rooms_path layer.xlsx
robot_path_costmap/collvoid_benchmark/: package.xml
robot_path_costmap/collvoid_controller/: CMakeLists.txt
robot_path_costmap/collvoid_local_planner/: package.xml
robot_path_costmap/collvoid_msgs/: package.xml
robot_path_costmap/path_costmap_turtlebot/: CMakeLists.txt  package.xml
robot_path_costmap/path_costmap_turtlebot/launch/: amcl_multi.launch  amcl_simple.launch  move_base.launch  simulation_simple.launch
robot_path_costmap/path_costmap_turtlebot/params/: costmap_common_params.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
robot_path_costmap/path_costmap_turtlebot/scripts/: kill.sh  pathcostmap_benchmark.sh  pathcostmap_std.sh
robot_path_costmap/robot_path_costmap/: CMakeLists.txt  costmap_plugins.xml  hints.txt  package.xml
robot_path_costmap/robot_path_costmap/cfg/: NavigationPathLayer.cfg
robot_path_costmap/robot_path_costmap/include/robot_path_costmap/: navigation_paths.h
robot_path_costmap/robot_path_costmap/src/: navigation_paths.cpp
rvo_turtlebot3/: CMakeLists.txt  package.xml
rvo_turtlebot3/launch/: amcl.launch  distributing_goals.launch  distributing_goals_all.launch  start.launch  turtlebot3_empty_world_16robots.launch  turtlebot3_empty_world_4agents.launch  turtlebot3_empty_world_8robots.launch  vo_based_algo_version_2.launch
rvo_turtlebot3/maps/: empty_world.pgm  empty_world.yaml
rvo_turtlebot3/msg/: Information.msg
rvo_turtlebot3/res/: DE_Project_Final_Presentation(omitted_slides).odg
rvo_turtlebot3/scripts/: kill.sh  vo_based_2.sh
vo_based_algo/: CMakeLists.txt  package.xml
(+195 files in other folders)
