<?xml version="1.0"?>
<package format="2">
  <name>collvoid</name>
  <version>0.0.0</version>
  <description>The collvoid package</description>

  <maintainer email="nele.traichel@st.ovgu.de">nele</maintainer>
  <license>BSD</license>
  <license>proprietary license (RVO2 library)</license>
  <license>BSD license by Daniel Claes</license>

  <url type="website">http://ros.org/wiki/multi_robot_collision_avoidance</url>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amcl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>amcl</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>collvoid_amcl</exec_depend>
  <exec_depend>collvoid_controller</exec_depend>
  <exec_depend>collvoid_dwa_local_planner</exec_depend>
  <exec_depend>pacman_turtles</exec_depend>
  <exec_depend>pacman_controller</exec_depend>
  <exec_depend>collvoid_pr2</exec_depend>
  <exec_depend>collvoid_stage</exec_depend>
  <exec_depend>collvoid_turtlebot</exec_depend>
  <exec_depend>collvoid_local_planner</exec_depend>
  <exec_depend>collvoid_simple_global_planner</exec_depend>
  <exec_depend>collvoid_msgs</exec_depend>
  <exec_depend>collvoid_wiggle_recovery</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>

</package>
