<?xml version="1.0"?>
<package format="2">
  <name>robot_path_costmap</name>
  <version>0.0.0</version>
  <description>The robot_path_costmap package</description>

  <maintainer email="patheplanning@todo.todo">patheplanning</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <author email="kilian.poessel@st.ovgu.de">Kilian Poessel</author>


  <!-- DEPENDENCIES -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>angles</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>costmap_2d</depend>
  <depend>string</depend>
  <depend>list</depend>
  <depend>cmath</depend>
  <depend>pluginlib</depend>
  <depend>dynamic_reconfigure</depend>


  <!-- EXPORT -->
<export>
  <costmap_2d plugin="${prefix}/navigation_paths_plugin.xml" />
</export>
</package>
